# my-heroes-game

GameSource/: CMakeLists.txt  GameAgenda.xlsx
GameSource/Heroes/: CMakeLists.txt  CMakeResearch.txt
GameSource/Heroes/include/Engine/: InputHandler.h  Log.h  SDLUtilityTool.h  SDLXbox360Controller.h  State.h  StateEngine.h
GameSource/Heroes/include/States/GamePlayState/: Camera.h  Components.h  GamePlayState.h  LevelManager.h  LuaStateLoader.h  PointDis.h  PointSim.h  TileMap.h  b2Conversion.h
GameSource/Heroes/include/States/GamePlayState/Entities/: AIComponents.h  ActionComponents.h  ComponentsContainer.h  DirectionComponents.h  EntityComponentConstants.h  EntityComponents.h  EntityGroup.h  EntityLoader.h  EntityMemory.h  EntityTargetMap.h  HealthComponents.h  MovementComponents.h  PhysicsComponents.h  RenderComponents.h  StatusComponents.h  SystemsComponents.h  TargetComponents.h
GameSource/Heroes/include/States/GamePlayState/Systems/: EntitySystem.h  PlayerSystems.h  WarriorSystems.h
GameSource/Heroes/include/States/MainMenuState/: MainMenuState.h
GameSource/Heroes/source/: AIComponents.cpp  ActionComponents.cpp  Camera.cpp  ComponentsContainer.cpp  DirectionComponents.cpp  EntityLoader.cpp  EntityMemory.cpp  EntityTargetMap.cpp  GamePlayState.cpp  HealthComponents.cpp  InputHandler.cpp  Log.cpp  LuaStateLoader.cpp  MainMenuState.cpp  MovementComponents.cpp  PhysicsComponents.cpp  PlayerSystems.cpp  RenderComponents.cpp  SDLUtilityTool.cpp  State.cpp  StateEngine.cpp  StatusComponents.cpp  SystemsComponents.cpp  TargetComponents.cpp  TileMap.cpp  WarriorSystems.cpp  b2Conversion.cpp  main.cpp
GameSource/Libraries/CBLibraries/: VERSIONS.txt
GameSource/Libraries/Libraries/: VERSIONS.txt
GameSource/Libraries/Libraries/LuaBindPackage/lua/Debug/: Lua.lib
GameSource/Libraries/Libraries/LuaBindPackage/lua/Release/: Lua.lib
GameSource/OldSource/: Box2DPixelInfo.h  Camera.h  Components.h  DecisionSystemControlTarget.h  DecisionSystemDefaultMovement.h  DrawableTileMap.h  EffectSystemDefaultAction.h  EffectSystemDefaultMovement.h  EffectSystemDefaultRender.h  EntityGroup.h  EntityManager.cpp  EntityManager.h  LevelManager.h  ReadMe.txt  SDLEventListener.h  SDLEventManager.cpp  SDLEventManager.h  SDLEventSender.h  SystemsManager.cpp  SystemsManager.h  TileMap.h
GameSource/Resources/Entities/: Rock.xml  TestEntity.xml  Warrior.xml
GameSource/Resources/Levels/Maps/: TestMap.map
GameSource/Resources/Textures/: Thumbs.db  test.txt
GameSourceCB/: CMakeLists.txt  GameAgenda.xlsx
GameSourceCB/Heroes/: CMakeLists.txt
GameSourceCB/Heroes/include/Engine/: InputHandler.h  Log.h  SDLUtilityTool.h  SDLXbox360Controller.h  State.h  StateEngine.h
GameSourceCB/Heroes/include/States/GamePlayState/: Camera.h  GamePlayState.h  LuaStateLoader.h  TileMap.h  b2Conversion.h
GameSourceCB/Heroes/include/States/GamePlayState/Entities/: AIComponents.h  ActionComponents.h  ComponentsContainer.h  EntityComponentConstants.h  EntityLoader.h  EntityMemory.h  EntityTargetMap.h  HealthComponents.h  MovementComponents.h  PhysicsComponents.h  RenderComponents.h  StatusComponents.h  SystemsComponents.h
GameSourceCB/Heroes/include/States/GamePlayState/Systems/: EntitySystem.h  PlayerSystems.h  WarriorSystems.h
GameSourceCB/Heroes/include/States/MainMenuState/: MainMenuState.h
GameSourceCB/Heroes/source/: AIComponents.cpp  ActionComponents.cpp  Camera.cpp  ComponentsContainer.cpp  EntityLoader.cpp  EntityMemory.cpp  EntityTargetMap.cpp  GamePlayState.cpp  HealthComponents.cpp  InputHandler.cpp  Log.cpp  LuaStateLoader.cpp  MainMenuState.cpp  MovementComponents.cpp  PhysicsComponents.cpp  PlayerSystems.cpp  RenderComponents.cpp  SDLUtilityTool.cpp  State.cpp  StateEngine.cpp  StatusComponents.cpp  SystemsComponents.cpp  TileMap.cpp  WarriorSystems.cpp  b2Conversion.cpp  main.cpp
GameSourceCB/Libraries/Libraries/LuaBindPackage/: README.txt
GameSourceCB/OldSource/: CameraB2DInfo.h  CameraPixelInfo.h  DecisionSystem.h  DecisionSystemControlMovement.h  DecisionSystemDefaultTarget.h  EffectSystem.h  EffectSystemDefaultDeath.h  EffectSystemDefaultHealth.h  GameManager.cpp  GameManager.h  Heroes.cpp  LevelManager.cpp  SDLEventData.h  SystemMasks.h  View.h  ViewData.h  ViewLevel.h  ViewManager.h  stdafx.h
GameSourceCB/Resources/Levels/Maps/: TestMap.map
